--- a/apps/desktop-wallet/.env.example
+++ b/apps/desktop-wallet/.env.example
@@ -1,1 +1,3 @@
 VITE_USE_LOCAL_ANNOUNCEMENT_FILE=false # Turn this to true to use local announcement file for development
+CROWDIN_PROJECT_ID=
+CROWDIN_PERSONAL_TOKEN=
